--- a/mobile-first/style.css
+++ b/mobile-first/style.css
@@ -9,8 +9,9 @@ body {
 header {
     background: #ffc916;
     color: white;
+    display: block; 
     padding: 20px;
-    box-shadow: 0 4px 6px rgba(179, 103, 16, 0.603); 
+    box-shadow: 0 4px 6px rgba(179, 103, 16, 0.603);
     border-bottom: 2px solid #dd9e1550;
 }
 
@@ -19,6 +20,48 @@ header h1 {
     margin: 0;
     letter-spacing: 2px;
     font-weight: 700;
+    display: inline-block; 
+    margin-right: 30px; 
+}
+
+nav {
+    display: inline-block;
+    font-size: large;
+}
+
+nav ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+}
+
+nav ul li {
+    margin-right: 45px; 
+}
+
+nav li a {
+    text-decoration: none;
+    color: white;
+    font-weight: 600;
+    text-transform: uppercase;
+    transition: color 0.3s;
+}
+
+nav li a:hover {
+    color: #4A2C17; 
+}
+
+#welcome {
+    font-size: medium;
+    background-color: white;
+    color: #6B4226;
+    padding: 10 20px;
+    margin: 20px auto;
+    width: 80%;
+    max-width: 1000px; 
+    border-radius: 10px; 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 #menu, #order, #contact {
